--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.todo {
+  cursor: pointer;
+  background-color: red;
+  font-size: large;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.strike {
+  text-decoration: line-through;
+  background-color: black;
+  color: azure;
+  font-size: large;
+}
+
+.App {
+  padding-left: 43%;
+  padding-top: 7%;
+}
+
+.form {
+  background-color:coral
+}
+
+.header {
+  color: aquamarine;
+}
+
+html, body {
+  height: 100%;
+  min-height: 100%;
+  background-color: brown;
 }
